# xsmurf

./: .gitignore  AUTHORS  ChangeLog  HOW_TO_CITE_THIS_SOFTWARE  Makefile.am  README  README.md  TODO  bootstrap.sh  configure.ac
cv1d/: Makefile.am  cv1d.c  cv1d.h  cv1d_a.c  cv1d_fft.h.in  cv1d_int.h  cv1d_limits.h  cv1d_misc.c  cv1d_n.c  myFftw.c  myFftw.h
cv2d/: Makefile.am  cv2d.c  cv2d.h  cv2d_a.c  cv2d_fft.h  cv2d_int.h  cv2d_limits.h  cv2d_misc.c  cv2d_n.c  myFftw.h  myFftw2.c  myFftw2.h
doc/: README
doc/examples/: README  clean.sh  test.tcl  test_wtmm2d.tcl  test_wtmm2d_follow.tcl  test_wtmm2d_vectorfield.tcl  test_wtmm2d_vectorfield_LT.tcl  test_wtmm3d.tcl  test_wtmm3d_brownian.tcl  test_wtmm3d_vectorfield.tcl  test_wtmm3d_vectorfield_LT.tcl  visu_wtsurfaces.tcl
doc/examples/data_vtk/: outline128.vtk  outline32.vtk  outline64.vtk
doc/html/: cascades.tcl-annot.html  cascades.tcl.html  cascades.tcl.txt  chain.tcl-annot.html  chain.tcl.html  convertImageToXsm.tcl-annot.html  convertImageToXsm.tcl.html  convertImageToXsm.tcl.txt  edisp.tcl-annot.html  edisp.tcl.html  edisp.tcl.txt  edit.tcl-annot.html  edit.tcl.html  edit.tcl.txt  eiChain.tcl-annot.html  eiChain.tcl.html  eiChain.tcl.txt  eiFiles.tcl-annot.html  eiFiles.tcl.html  eiFiles.tcl.txt  extImageTools.tcl-annot.html  extImageTools.tcl.html  extImageTools.tcl.txt  help.tcl-annot.html  help.tcl.html  help.tcl.txt  histogram.tcl-annot.html  histogram.tcl.html  hpcal_proc.tcl-annot.html  hpcal_proc.tcl.html  hpcal_proc.tcl.txt  imStudy.tcl-annot.html  imStudy.tcl.html  imStudy.tcl.txt  imTools.tcl-annot.html  imTools.tcl.html  index.html  index_annot.html  index_annot_full.html  index_call.html  (+55 more)
doc/tcldoc/: ChangeLog  Makefile  tcldoc.html  tcldoc.tcl  tcldoc_scanner.fcl  tcldoc_scanner.tcl
doc/templates/gpu/cannyEdge2D/: README  (+19 more)
doc/templates/testXsmurf_scalar2d/: README  average_pf.tcl  parameters_gaussian.tcl.in  parameters_mexican.tcl.in  scr_gaussian.tcl  scr_mexican.tcl
doc/templates/testXsmurf_scalar3d/: README  average_pf.tcl  compute_pf.tcl  parameters_gaussian.tcl.in  parameters_mexican.tcl.in  scr_gaussian.tcl  scr_mexican.tcl
doc/templates/testXsmurf_vector2d/: parameters_gaussian.tcl.in  parameters_mexican.tcl.in  scr_gaussian.tcl  scr_mexican.tcl
doc/templates/testXsmurf_vector2d_LT/: README  average_pf.tcl  parameters_gaussian.tcl.in  parameters_mexican.tcl.in  scr_gaussian.tcl  scr_mexican.tcl
dyadique/: Makefile.am  dyadique.h  fast_convol.c
edge/: Makefile.am  extrema.c  extrema.h  extrema_core.c  extrema_core.h  misc.c  misc.h
gfft/: Makefile.am  gfft.c  gfft.h  gfft_16pts.c  gfft_2pts.c  gfft_4pts.c  gfft_8pts.c  gfft_greater_16_cplx.c  gfft_greater_16_cplx_for_real.c  gfft_greater_32_real.c  gfft_misc.c  gfft_shuffle.c  gfft_shuffle_1024_cplx.c  gfft_shuffle_128_cplx.c  gfft_shuffle_16_cplx.c  gfft_shuffle_256_cplx.c  gfft_shuffle_32_cplx.c  gfft_shuffle_512_cplx.c  gfft_shuffle_64_cplx.c  gifft_16pts.c  gifft_2pts.c  gifft_4pts.c  gifft_8pts.c  gifft_greater_16_cplx.c  gifft_greater_16_cplx_for_real.c  gifft_greater_32_real.c
image/: Makefile.am  fft.c  fftw3_inc.h  generator.c  image.c  image.h  image3D.c  image3D.h  image_int.h  nuage.c  op.c  wt2d.c  wt3d.c
interface/: Makefile.am  sm_interface_init.c
interpreter/: Makefile.am  arguments.c  arguments.h  cv1dPkg.c  cv2dPkg.c  dyadPkg.c  files_cmds.c  hash_tables.c  hash_tables.h  image_cmds.c  morph_cmds.c  signal_cmds.c  smPkgInt.h  sm_interpreter.h  sm_interpreter_init.c  stPkg.c  stats_cmds.c  wt1d_cmds.c  wt2d_cmds.c  wt3d_cmds.c
log/: logMsg.h  mainLogMsg.h
m4/: fftw.m4  fftw2.m4  fftw2_old.m4  jpeg.m4  matheval.m4  sfftw2.m4  tcl.m4
main/: Makefile.am  int_startup.tcl.in  smMalloc.h  smurf_init.c  smurfrc  xsm_main.c  xsmurf.1  xsmurf.h  xsmurf.spec
morph2d/: Makefile.am  mdilate.c  merode.c  mgetargs.c  mimgmanip.c  mloadse.c  morph.h  morph_sub.c  morph_sub.h  mrank.c  msetupop.c  mthresh.c
obTcl/: COPYRIGHT  Layout.tcl  PanedW.tcl  README  ScrText.tcl  Tabs.tcl  TkManText.tcl  base.tcl  crunch_spec  demo  docs  inherit.tcl  makefile  obTcl.ascii  obTcl.cat  obTcl.n  obTcl.tkman  obtcl.c  obtcl.tcl  obtcl_mkindex  panedw  skip.awk  tabs  tclIndex  test.tst  utils.tcl  wrap
obTcl/images/: teapot.ppm
obTcl/tcl_cruncher/: CHANGES  Makefile  README  tcl_compiler_crash_tests  tcl_cruncher.c  tcl_cruncher.man
signal/: Makefile.am  fft.c  interpolation.c  op.c  sig.h  signal.c  signal.h  signal_int.h  tools.c  walk.c
spline/: Makefile.am  nonlinfit.c  nonlinfit.h  nr_lib.c  nr_lib.h  nrutil.c
stats/: Makefile.am  ext_image.c  stat.h  stats.c  stats.h  stats_int.h
tcl_library/: chain.tcl  convertImageToXsm.tcl  curvefit.tcl  edisp.tcl  eiChain.tcl  eiChain_new.tcl.old  eiChain_old.tcl.old  eiFiles.tcl  fitsload.tcl  histogram.tcl  hpcal_proc.tcl  imStudy.tcl  imTools.tcl  legendre.tcl  morphology_proc.tcl  myimg.tcl  owt2dPkg.tcl  partFcts.tcl  partFcts.tcl_new  partFcts.tcl_old  part_fcts.tcl  search_command_definition.tcl  sigTools.tcl  startup.tcl  study.tcl  tclIndex  tkcon.tcl.v2.4  tkcon.tcl.v2.7  to.tcl  tools.tcl  wt.tcl
tcl_library/obtcl/: ExtimageViewer.tcl  ExtimageViewer.tcl.old  ImageViewer.tcl  ImageViewer.tcl_new  SignalViewer.tcl  SmurfViewer.tcl  Viewer.tcl  multiGraphWindow.tcl  myEiWin.tcl  myGraph.tcl  part_fct.tcl  signal_viewer.tcl  tclIndex
tcl_library/old_files/: tkcon.tcl.old  tkcon.tcl.v1.6
utils/: compute_2dfBm_divfree.py  compute_2dfBm_divfree_simple.py
widgets/: Colormap.c  Colormap.h  ConvExt.c  ConvIma.c  ConvSig.c  Convert.h  Dictionary.c  Dictionary.h  Draw.c  Draw.h  Image.c  Image.h  Makefile.am  ViewerLib.h  Widget.h  xsm_viewer.c
wt1d/: Makefile.am  wt1d.c  wt1d.h  wt1d_collection.c  wt1d_int.h  wt1d_wavelets.c
wt2d/: Extrema.c  Lissage.c  Makefile.am  Misc.c  chain.c  chain2.c  extremum.c  extremum.h  line.c  line.h  lisst.h  list.c  list.h  single_max.c  skeleton.c  skeleton.h  surface.c  surface.h  vertical_chain.c  wt2d.c  wt2d.h  wt2d_int.h
wt3d/: Chain3D.c  Makefile.am  Misc3D.c  extremum3d.h  surflet.c  surflet.h  wt3d.c  wt3d.h  wt3d_int.h
(+12 files in other folders)
