AM_CFLAGS =  @CFLAGS@ -I.

noinst_LTLIBRARIES=libFFT.la

libFFT_la_SOURCES=	gfft.c \
	gfft_2pts.c \
	gfft_4pts.c \
	gfft_8pts.c \
	gfft_16pts.c \
	gfft_greater_16_cplx.c \
	gfft_greater_16_cplx_for_real.c \
	gfft_greater_32_real.c \
	gifft_2pts.c \
	gifft_4pts.c \
	gifft_8pts.c \
	gifft_16pts.c \
	gifft_greater_16_cplx.c \
	gifft_greater_16_cplx_for_real.c \
	gifft_greater_32_real.c \
	gfft_shuffle.c \
	gfft_shuffle_16_cplx.c \
	gfft_shuffle_32_cplx.c \
	gfft_shuffle_64_cplx.c \
	gfft_shuffle_128_cplx.c \
	gfft_shuffle_256_cplx.c \
	gfft_shuffle_512_cplx.c \
	gfft_shuffle_1024_cplx.c \
	gfft_misc.c

pkginclude_HEADERS = gfft.h
