AM_CFLAGS = @CFLAGS@ @MEM_DEBUG_FLAGS@ @TK_INCLUDES@ @TCL_INCLUDES@ @XINCLUDES@ @MATHEVAL_INC@

noinst_LTLIBRARIES=libwidgets.la

libwidgets_la_SOURCES=Image.c \
	Dictionary.c \
	xsm_viewer.c \
	Colormap.c \
	ConvSig.c \
	ConvIma.c \
	ConvExt.c \
	Draw.c

pkginclude_HEADERS = Colormap.h  Convert.h  Dictionary.h  Draw.h  Image.h  ViewerLib.h  Widget.h
