AM_CFLAGS = @CFLAGS@ @MEM_DEBUG_FLAGS@

noinst_LTLIBRARIES=libwt2d.la

libwt2d_la_SOURCES=wt2d.c chain.c Misc.c Extrema.c Lissage.c chain2.c \
	extremum.c line.c list.c vertical_chain.c surface.c single_max.c \
	skeleton.c

pkginclude_HEADERS = extremum.h  line.h  lisst.h  list.h  skeleton.h  surface.h  wt2d.h  wt2d_int.h
